--- a/.github/workflows/issueautomation.yml
+++ b/.github/workflows/issueautomation.yml
@@ -2,6 +2,7 @@ name: Issue Management
 on:
   issue_comment:
     types: [created]
+
 jobs:
   get-issue-parameters:
     runs-on: ubuntu-latest
@@ -26,41 +27,48 @@ jobs:
         run: |
           PROJECT_NUMBER=$(gh project list --format json | jq -r '.projects[] | select(.title=="test workflow") | .number')
           echo "PROJECT_NUMBER=${PROJECT_NUMBER}" >> $GITHUB_ENV
+
       - name: Get Issue URL
         id: get_issue_url
         run: |
           ISSUE_URL=$(gh issue view "${{ github.event.issue.number }}" --json url | jq -r '.url')
           echo "ISSUE_URL=${ISSUE_URL}" >> $GITHUB_ENV
+
       - name: Get Issue ID
         id: get_issue_id
         run: |
           ISSUE_ID=$(gh project item-list ${{env.PROJECT_NUMBER}} --owner '@me' --format json | jq -r '.items[] | select(.content.number==${{ github.event.issue.number }}) | .id')
           echo "ISSUE_ID=${ISSUE_ID}" >> $GITHUB_ENV
           echo "ISSUE_ID=${ISSUE_ID}" >> $GITHUB_OUTPUT
+
       - name: Get Field ID
         id: get_field_id
         run: |
           FIELD_ID=$(gh project field-list ${{env.PROJECT_NUMBER}} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .id')
           echo "FIELD_ID=${FIELD_ID}" >> $GITHUB_ENV
           echo "FIELD_ID=${FIELD_ID}" >> $GITHUB_OUTPUT
+
       - name: Get Project ID
         id: get_project_id
         run: |
           PROJECT_ID=$(gh project list --format json | jq -r '.projects[] | select(.title=="test workflow") | .id')
           echo "PROJECT_ID=${PROJECT_ID}" >> $GITHUB_ENV
           echo "PROJECT_ID=${PROJECT_ID}" >> $GITHUB_OUTPUT
+
       - name: Get Option ID 1
         id: get_option_id1
         run: |
           INPROGRESS_OPTION_ID=$(gh project field-list ${{env.PROJECT_NUMBER}} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .options[] | select(.name=="In progress") | .id')
           echo "INPROGRESS_OPTION_ID=${INPROGRESS_OPTION_ID}" >> $GITHUB_ENV
           echo "INPROGRESS_OPTION_ID=${INPROGRESS_OPTION_ID}" >> $GITHUB_OUTPUT
+
       - name: Get Option ID 2
         id: get_option_id2
         run: |
           DONE_OPTION_ID=$(gh project field-list ${{env.PROJECT_NUMBER}} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .options[] | select(.name=="Done") | .id')
           echo "DONE_OPTION_ID=${DONE_OPTION_ID}" >> $GITHUB_ENV
           echo "DONE_OPTION_ID=${DONE_OPTION_ID}" >> $GITHUB_OUTPUT
+
   move-issue:
     runs-on: ubuntu-latest
     needs: get-issue-parameters
@@ -73,11 +81,13 @@ jobs:
         run: |
           echo "Moving to In-Progress"
           gh project item-edit --id ${{needs.get-issue-parameters.outputs.ISSUE_ID}} --field-id ${{needs.get-issue-parameters.outputs.FIELD_ID}} --project-id ${{needs.get-issue-parameters.outputs.PROJECT_ID}} --single-select-option-id ${{needs.get-issue-parameters.outputs.OPTION_ID1}}
-	  - name: Move Issue to Done
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Move Issue to Done
         if: contains(github.event.comment.body, 'Done')
         run: |
           echo "Moving to Done"
           gh project item-edit --id ${{needs.get-issue-parameters.outputs.ISSUE_ID}} --field-id ${{needs.get-issue-parameters.outputs.FIELD_ID}} --project-id ${{needs.get-issue-parameters.outputs.PROJECT_ID}} --single-select-option-id ${{needs.get-issue-parameters.outputs.OPTION_ID2}}
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GH_REPO: ${{ github.repository }}
