--- a/.github/workflows/issueautolabel.yml
+++ b/.github/workflows/issueautolabel.yml
@@ -1,44 +1,44 @@
-name: Auto-Label Issues
- 
+name: Auto-Label New Issues
+
 on:
   issues:
-    types: [opened] # Trigger the workflow when a new issue is created
- 
+    types: [opened]  # Trigger when a new issue is created
+
 jobs:
-  auto-label:
-    runs-on: ubuntu-latest # Run on the latest Ubuntu environment
- 
+  label-automation:
+    runs-on: ubuntu-latest  # Use the latest Ubuntu environment for the workflow
+
     steps:
-      - name: Auto-label based on issue description
-        uses: actions/github-script@v6 # Use the GitHub Script action
+      - name: Label issues based on content
+        uses: actions/github-script@v6  # Utilize GitHub Script action to run custom code
         with:
           script: |
-            // Get the issue description and convert it to lowercase
-            const issueBody = context.payload.issue.body?.toLowerCase() || "";
- 
-            // Array to hold labels to add
-            const labelsToAdd = [];
- 
-            // Check for keywords and add corresponding labels
-            if (issueBody.includes('bug')) {
-              labelsToAdd.push('bug');
+            // Retrieve the issue body and convert it to lowercase for easier matching
+            const issueContent = context.payload.issue.body?.toLowerCase() || "";
+
+            // Initialize an empty array for labels to apply
+            const labelsToApply = [];
+
+            // Check for specific keywords in the issue description and add respective labels
+            if (issueContent.includes('bug')) {
+              labelsToApply.push('bug');
             }
-            if (issueBody.includes('enhancement')) {
-              labelsToAdd.push('enhancement');
+            if (issueContent.includes('enhancement')) {
+              labelsToApply.push('enhancement');
             }
-            if (issueBody.includes('documentation')) {
-              labelsToAdd.push('documentation');
+            if (issueContent.includes('documentation')) {
+              labelsToApply.push('documentation');
             }
- 
-            // Apply the labels if any match
-            if (labelsToAdd.length > 0) {
+
+            // If matching labels are found, apply them to the issue
+            if (labelsToApply.length > 0) {
               await github.rest.issues.addLabels({
-                owner: context.repo.owner, // Repo owner
-                repo: context.repo.repo,   // Repo name
-                issue_number: context.payload.issue.number, // Issue number
-                labels: labelsToAdd, // Labels to apply
+                owner: context.repo.owner,  // Repository owner
+                repo: context.repo.repo,    // Repository name
+                issue_number: context.payload.issue.number,  // Issue number
+                labels: labelsToApply,  // Labels to assign to the issue
               });
-              console.log(`Labels added: ${labelsToAdd.join(', ')}`);
+              console.log(`Applied labels: ${labelsToApply.join(', ')}`);
             } else {
-              console.log("No matching labels found in the issue description.");
+              console.log("No labels were matched in the issue description.");
             }
